# digital-fte-crm--hackthon-5-

./: IMPLEMENTATION-SUMMARY.md  README.md  part-1.md  part-2.md
.claude/: settings.local.json
.claude/skills/: SKILLS-README.md
.claude/skills/fte-context-generator/: SKILL.md
.claude/skills/fte-context-generator/assets/: company-profile-template.md
.claude/skills/fte-context-generator/references/: context-file-specs.md
.claude/skills/fte-context-generator/scripts/: generate_context.py
.claude/skills/fte-incubation-setup/: SKILL.md
.claude/skills/fte-incubation-setup/references/: package-list.md
.claude/skills/fte-incubation-setup/scripts/: setup_project.ps1  setup_project.sh
.claude/skills/fte-mcp-server/: SKILL.md
.claude/skills/fte-mcp-server/assets/: server-config.json
.claude/skills/fte-mcp-server/references/: mcp-tools-reference.md
.claude/skills/fte-mcp-server/scripts/: scaffold_mcp_server.py
.claude/skills/fte-prototype-agent/: SKILL.md
.claude/skills/fte-prototype-agent/assets/: agent-template.py
.claude/skills/fte-testing-validator/: SKILL.md
backend/: .gitignore  README.md  pyproject.toml
backend/context/: brand-voice.md  company-profile.md  escalation-rules.md  product-docs.md  sample-tickets.json
backend/specs/: customer-success-fte-spec.md  discovery-log.md  performance-baseline.py  skills.md
backend/src/agent/: __init__.py  customer_agent.py
backend/src/channels/: __init__.py
backend/src/mcp_server/: __init__.py  server.py
backend/tests/: test_agent.py  test_mcp.py
(+4 files in other folders)
